# homelab-mono

./: .gitignore  README.md
compose/: README.md
compose/babyblue/ai/: docker-compose.yml
dataops/docker/: .env.example  README.md
homelab-terraform/: README.md
python/home-automation-pipelines/: .gitignore  README.md  pyproject.toml  worship_organization.py
python/home-automation-pipelines/home_automation_pipelines/: __about__.py  __main__.py
python/home-automation-pipelines/home_automation_pipelines/cli/: __init__.py
python/home-automation-pipelines/home_automation_pipelines/pipelines/: main.py
python/home-automation-pipelines/home_automation_pipelines/pipelines/ksp_books/: sync_books_for_ksp.py
python/home-automation-pipelines/home_automation_pipelines/pipelines/olivet_sermon_transcriptions/: README.md
python/home-automation-pipelines/home_automation_pipelines/pipelines/ynab/: README.md  models.py
python/home-automation-pipelines/home_automation_pipelines/pipelines/ynab/capital1/: capital1_account2.py  capital1_card.py  category_mapping.py
python/home-automation-pipelines/home_automation_pipelines/pipelines/ynab/capital1/scripts/: match_capital1_payees.py
python/home-automation-pipelines/home_automation_pipelines/pipelines/ynab/cefcu/: cefcu_account.py  cefcu_account2.py
python/home-automation-pipelines/home_automation_pipelines/pipelines/ynab/cefcu/scripts/: match_cefcu_payees.py
python/home-automation-pipelines/home_automation_pipelines/pipelines/ynab/chase/: chase_account2.py  chase_amazon_card.py
python/home-automation-pipelines/home_automation_pipelines/pipelines/ynab/chase/scripts/: get_list_of_categories.py  match_chase_payees.py
python/home-automation-pipelines/home_automation_pipelines/pipelines/ynab/foxcom/: foxcom_account.py  foxcom_account2.py
python/home-automation-pipelines/home_automation_pipelines/pipelines/ynab/foxcom/scripts/: match_foxcom_payees.py
scripts/: migrate-issues.sh
(+21 files in other folders)
